# ModernFRIED

./: .gitignore  CMakeLists.txt  LICENSE  README
CSharpWrapper/: FriedWrapper.sln
CSharpWrapper/FriedWrapper/: DeFriedImage.cs  FriedApi.cs  FriedFlags.cs  FriedImage.cs  FriedWrapper.csproj
CSharpWrapper/FriedWrapper.Test/: FriedWrapper.Test.csproj  Tests.cs
src/fried/: bitbuffer.hpp  decode.cpp  encode.cpp  entropy.cpp  externalApi.cpp  externalApi.h  fried.hpp  fried_internal.hpp  pixel.cpp  quantize.cpp  transforms.cpp  types_updated.h
tests/: test_fried_codec.cpp
tools/: fried_codec_tool.cpp
